--- a/src/main/resources/com/mmn/circuitscourts/fxml/Admin/Commandes.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Admin/Commandes.fxml
@@ -88,7 +88,7 @@
                                                 <Insets left="40.0" />
                                             </HBox.margin>
                                         </Label>
-                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" prefWidth="141.0" styleClass="commande-tableview-header-title" text="Libellé" />
+                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" prefWidth="141.0" styleClass="commande-tableview-header-title" text="libelle article" />
                                         <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="141.0" prefWidth="151.0" styleClass="commande-tableview-header-title" text="Poids" />
                                         <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" prefWidth="141.0" styleClass="commande-tableview-header-title" text="Horaire" />
                                         <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" prefWidth="141.0" styleClass="commande-tableview-header-title" text="Date de commande" />
