✅Added profil info, and confirmationDialog for deleteCommande (Admin)

--- a/src/main/resources/com/mmn/circuitscourts/css/style.css
+++ b/src/main/resources/com/mmn/circuitscourts/css/style.css
@@ -1004,6 +1004,16 @@
     -fx-text-fill: #475467;
 }
 
+.profil-container-line {
+    -fx-border-color: #EAECF0;
+    -fx-border-width: 0 0 1px 0;
+    -fx-border-style: solid;
+}
+
+.profil-container-line-title {
+    -fx-text-fill: #667085;
+}
+
 .client-commande-tableview-line {
     -fx-cursor: hand;
     -fx-border-style: solid;
@@ -1180,4 +1190,68 @@
     -fx-max-width: -width-size;
 
     -fx-shape: "M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z";
+}
+
+/* Dialog confirmation */
+
+.confirm-dialog {
+    -fx-background-color: white;
+    -fx-background-radius: 8px;
+    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 8, -2, 0, 4);
+}
+
+.confirm-dialog-title {
+    -fx-font-size: 16;
+    -fx-font-weight: 700;
+}
+
+.confirm-dialog-topbar-red {
+    -fx-background-radius: 8px 8px 0 0;
+    -fx-background-color: red;
+}
+
+.confirm-dialog-button-ok {
+    -fx-cursor: hand;
+    -fx-font: 14px 'Helvetica';
+    -fx-font-weight: 700;
+    -fx-background-color: linear-gradient(from 0.0% 0.0% to 100.0% 0.0%, #2970FF 0.2%, #0040C1 99.99%);
+    -fx-background-radius: 4px;
+    -fx-border-radius: 4px;
+    -fx-text-fill: white;
+    -fx-border-color: linear-gradient(from 0.0% 0.0% to 100.0% 0.0%, #2970FF 0.2%, #0040C1 99.99%);
+    -fx-border-style: solid;
+    -fx-border-width: 1px;
+}
+
+.confirm-dialog-button-ok:hover {
+    -fx-background-color: #154FEF;
+}
+
+.confirm-dialog-button-ok:pressed {
+    -fx-background-color: #5280FF;
+    -fx-border-color: #5280FF;
+}
+
+.confirm-dialog-button-cancel {
+    -fx-cursor: hand;
+    -fx-font-size: 12;
+    -fx-font-weight: 700;
+    -fx-background-color: white;
+    -fx-background-radius: 4px;
+    -fx-border-radius: 4px;
+    -fx-border-style: solid;
+    -fx-border-width: 1px;
+    -fx-border-color: #EAECF0;
+}
+
+.warning-img {
+    -icon-paint: red;
+    -fx-background-color: -icon-paint;
+    -width-size: 64;
+    -height-size: 64;
+    -fx-min-height: -height-size;
+    -fx-min-width: -width-size;
+    -fx-max-height: -height-size;
+    -fx-max-width: -width-size;
+    -fx-shape: "M256 32c14.2 0 27.3 7.5 34.5 19.8l216 368c7.3 12.4 7.3 27.7 .2 40.1S486.3 480 472 480H40c-14.3 0-27.6-7.7-34.7-20.1s-7-27.8 .2-40.1l216-368C228.7 39.5 241.8 32 256 32zm0 128c-13.3 0-24 10.7-24 24V296c0 13.3 10.7 24 24 24s24-10.7 24-24V184c0-13.3-10.7-24-24-24zm32 224c0-17.7-14.3-32-32-32s-32 14.3-32 32s14.3 32 32 32s32-14.3 32-32z";
 }
