--- a/src/main/resources/com/mmn/circuitscourts/fxml/Admin/AddVehicule.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Admin/AddVehicule.fxml
@@ -7,6 +7,10 @@
         <?import javafx.scene.layout.VBox?>
 
         <?import javafx.scene.layout.Region?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ComboBox?>
 <StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: #EAECF0;"
            stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
            fx:controller="com.mmn.circuitscourts.controller.admin.AddVehiculeController">
@@ -26,6 +30,36 @@
                                 <Region styleClass="back-button-img"/>
                             </graphic>
                         </Button>
+                        <Label styleClass="main-title" text="Ajout d'une commande">
+                            <VBox.margin>
+                                <Insets top="20.0" />
+                            </VBox.margin></Label>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                            <children>
+                                <TextField fx:id="numImmat" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Numéro d'immatriculation"/>
+                                <TextField fx:id="poids" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="Poids">
+                                    <HBox.margin>
+                                        <Insets left="200.0" />
+                                    </HBox.margin>
+                                </TextField>
+                            </children>
+                            <VBox.margin>
+                                <Insets top="75.0" />
+                            </VBox.margin>
+                        </HBox>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                            <children>
+                                <ComboBox fx:id="namesProd" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="numSirets"/>
+                            </children>
+                            <VBox.margin>
+                                <Insets top="75.0" />
+                            </VBox.margin>
+                        </HBox>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                            <children>
+                                <Button id="cmdButton" minHeight="40.0" minWidth="192.0" mnemonicParsing="false" text="Ajouter le véhicule" onMouseClicked="#onCreateButton" styleClass="addCommandeButton"/>
+                            </children>
+                        </HBox>
                     </children>
                     <BorderPane.margin>
                         <Insets/>
