--- a/src/main/resources/com/mmn/circuitscourts/fxml/Admin/Commandes.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Admin/Commandes.fxml
@@ -11,58 +11,66 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: #EAECF0;" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mmn.circuitscourts.controller.admin.CommandesController">
+<StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: #EAECF0;"
+           stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
+           fx:controller="com.mmn.circuitscourts.controller.admin.CommandesController">
     <children>
         <BorderPane fx:id="container" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: white">
             <left>
-                <fx:include source="Sidebar.fxml" />
+                <fx:include source="Sidebar.fxml"/>
             </left>
             <center>
                 <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                     <children>
                         <HBox prefHeight="120.0" prefWidth="871.0">
                             <VBox.margin>
-                                <Insets bottom="20.0" />
+                                <Insets bottom="20.0"/>
                             </VBox.margin>
                             <children>
                                 <Label prefHeight="35.0" prefWidth="142.0" styleClass="main-title" text="Commandes">
                                     <HBox.margin>
-                                        <Insets top="30.0" />
+                                        <Insets top="30.0"/>
                                     </HBox.margin>
                                 </Label>
-                                <VBox fx:id="successPopup" maxHeight="114.0" minWidth="400.0" prefHeight="114.0" prefWidth="400.0" styleClass="successPopup" visible="false">
+                                <VBox fx:id="successPopup" maxHeight="114.0" minWidth="400.0" prefHeight="114.0"
+                                      prefWidth="400.0" styleClass="successPopup" visible="false">
                                     <HBox.margin>
-                                        <Insets left="325.0" />
+                                        <Insets left="325.0"/>
                                     </HBox.margin>
                                     <children>
-                                        <VBox maxHeight="4.0" minHeight="4.0" prefHeight="4.0" prefWidth="339.0" styleClass="successPopup-indicator" />
+                                        <VBox maxHeight="4.0" minHeight="4.0" prefHeight="4.0" prefWidth="339.0"
+                                              styleClass="successPopup-indicator"/>
                                         <HBox prefHeight="120.0" prefWidth="340.0" styleClass="successPopup-container">
                                             <children>
                                                 <Label prefHeight="17.0" prefWidth="33.0">
                                                     <padding>
-                                                        <Insets left="10.0" top="17.0" />
+                                                        <Insets left="10.0" top="17.0"/>
                                                     </padding>
                                                     <graphic>
-                                                        <Region styleClass="successPopup-img" />
+                                                        <Region styleClass="successPopup-img"/>
                                                     </graphic>
                                                 </Label>
                                                 <VBox prefHeight="110.0" prefWidth="312.0">
                                                     <children>
-                                                        <Label styleClass="successPopup-title" text="Commande ajoutée !" />
-                                                        <Label styleClass="successPopup-subtitle" text="La commande n°X a bien été ajoutée !" />
+                                                        <Label styleClass="successPopup-title"
+                                                               text="Commande ajoutée !"/>
+                                                        <Label styleClass="successPopup-subtitle"
+                                                               text="La commande n°X a bien été ajoutée !"/>
                                                     </children>
                                                     <padding>
-                                                        <Insets left="15.0" top="15.0" />
+                                                        <Insets left="15.0" top="15.0"/>
                                                     </padding>
                                                 </VBox>
                                                 <VBox alignment="TOP_RIGHT" prefHeight="120.0" prefWidth="57.0">
                                                     <children>
-                                                        <Button mnemonicParsing="false" onMouseClicked="#onClosePopup" prefHeight="28.0" prefWidth="28.0" styleClass="successPopup-close">
+                                                        <Button mnemonicParsing="false" onMouseClicked="#onClosePopup"
+                                                                prefHeight="28.0" prefWidth="28.0"
+                                                                styleClass="successPopup-close">
                                                             <graphic>
-                                                                <Region styleClass="successPopup-close-img" />
+                                                                <Region styleClass="successPopup-close-img"/>
                                                             </graphic>
                                                             <VBox.margin>
-                                                                <Insets right="15.0" top="20.0" />
+                                                                <Insets right="15.0" top="20.0"/>
                                                             </VBox.margin>
                                                         </Button>
                                                     </children>
@@ -75,87 +83,108 @@
                         </HBox>
                         <VBox fx:id="commandeTable" prefHeight="500" prefWidth="950.0" styleClass="commande-tableview">
                             <children>
-                                <HBox alignment="CENTER_LEFT" prefHeight="56" prefWidth="871.0" styleClass="commande-tableview-header">
+                                <HBox alignment="CENTER_LEFT" prefHeight="56" prefWidth="871.0"
+                                      styleClass="commande-tableview-header">
                                     <children>
-                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="141.0" prefWidth="151.0" styleClass="commande-tableview-header-title" text="Numéro">
+                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308"
+                                               maxWidth="141.0" prefWidth="151.0"
+                                               styleClass="commande-tableview-header-title" text="Numéro">
                                             <HBox.margin>
-                                                <Insets left="40.0" />
+                                                <Insets left="40.0"/>
                                             </HBox.margin>
                                         </Label>
-                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" prefWidth="141.0" styleClass="commande-tableview-header-title" text="libelle article" />
-                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="141.0" prefWidth="151.0" styleClass="commande-tableview-header-title" text="Poids" />
-                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" prefWidth="141.0" styleClass="commande-tableview-header-title" text="Horaire" />
-                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" prefWidth="141.0" styleClass="commande-tableview-header-title" text="Date de commande" />
+                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308"
+                                               prefWidth="141.0" styleClass="commande-tableview-header-title"
+                                               text="libelle article"/>
+                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308"
+                                               maxWidth="141.0" prefWidth="151.0"
+                                               styleClass="commande-tableview-header-title" text="Poids"/>
+                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308"
+                                               prefWidth="141.0" styleClass="commande-tableview-header-title"
+                                               text="Horaire"/>
+                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308"
+                                               prefWidth="141.0" styleClass="commande-tableview-header-title"
+                                               text="Date de commande"/>
                                     </children>
                                     <padding>
-                                        <Insets right="40.0" />
+                                        <Insets right="40.0"/>
                                     </padding>
                                 </HBox>
-                        <ScrollPane prefHeight="444.0" prefWidth="869.0">
-                           <content>
-                              <VBox fx:id="contentTable" style="-fx-background-color: white;">
-                                 <children>
+                                <ScrollPane prefHeight="444.0" prefWidth="869.0">
+                                    <content>
+                                        <VBox fx:id="contentTable" style="-fx-background-color: white;">
+                                            <children>
 
-                                 </children>
-                              </VBox>
-                           </content>
-                        </ScrollPane>
+                                            </children>
+                                        </VBox>
+                                    </content>
+                                </ScrollPane>
                             </children>
                         </VBox>
                         <Pane>
                             <children>
-                                <Button fx:id="addButton" layoutX="847.0" layoutY="-24.0" mnemonicParsing="false" onMouseClicked="#onAddButton" prefHeight="48.0" prefWidth="48.0" styleClass="addButton" textAlignment="CENTER">
+                                <Button fx:id="addButton" layoutX="847.0" layoutY="-24.0" mnemonicParsing="false"
+                                        onMouseClicked="#onAddButton" prefHeight="48.0" prefWidth="48.0"
+                                        styleClass="addButton" textAlignment="CENTER">
                                     <graphic>
-                                        <Region styleClass="addButton-img" />
+                                        <Region styleClass="addButton-img"/>
                                     </graphic>
                                 </Button>
                             </children>
                         </Pane>
                     </children>
                     <BorderPane.margin>
-                        <Insets bottom="30.0" left="40.0" right="40.0" top="30.0" />
+                        <Insets bottom="30.0" left="40.0" right="40.0" top="30.0"/>
                     </BorderPane.margin>
                 </VBox>
             </center>
         </BorderPane>
-      <VBox fx:id="confirmationDialog" visible="false" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: rgba(0,0,0,0.25);">
-         <children>
-            <VBox maxHeight="230.0" maxWidth="500.0" prefHeight="230.0" prefWidth="100.0" styleClass="confirm-dialog">
-               <children>
-                  <VBox maxHeight="8.0" prefHeight="200.0" prefWidth="100.0" styleClass="confirm-dialog-topbar-red" />
-                  <HBox VBox.vgrow="ALWAYS">
-                     <VBox.margin>
-                        <Insets bottom="20.0" left="30.0" right="20.0" top="20.0" />
-                     </VBox.margin>
-                     <children>
-                         <Label prefHeight="100.0" prefWidth="200.0">
-                             <graphic>
-                                 <Region styleClass="warning-img" />
-                             </graphic>
-                         </Label>
-                        <VBox prefWidth="500.0">
-                           <children>
-                              <Label prefWidth="460.0" styleClass="confirm-dialog-title" text="Supprimer la commande ?" />
-                              <Label text="Voulez-vous vraiment supprimer la commande n°" />
-                              <HBox alignment="CENTER" prefHeight="68.0" prefWidth="356.0" spacing="40.0">
-                                 <children>
-                                    <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" styleClass="confirm-dialog-button-ok" text="Oui" fx:id="okButton"/>
-                                    <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" styleClass="confirm-dialog-button-cancel" text="Annuler" fx:id="cancelButton"/>
-                                 </children>
-                                 <VBox.margin>
-                                    <Insets top="65.0" />
-                                 </VBox.margin>
-                              </HBox>
-                           </children>
-                           <HBox.margin>
-                              <Insets left="30.0" />
-                           </HBox.margin>
-                        </VBox>
-                     </children>
-                  </HBox>
-               </children>
-            </VBox>
-         </children>
-      </VBox>
+        <VBox fx:id="confirmationDialog" visible="false" alignment="CENTER" prefHeight="200.0" prefWidth="100.0"
+              style="-fx-background-color: rgba(0,0,0,0.25);">
+            <children>
+                <VBox maxHeight="230.0" maxWidth="500.0" prefHeight="230.0" prefWidth="100.0"
+                      styleClass="confirm-dialog">
+                    <children>
+                        <VBox maxHeight="8.0" prefHeight="200.0" prefWidth="100.0"
+                              styleClass="confirm-dialog-topbar-red"/>
+                        <HBox VBox.vgrow="ALWAYS">
+                            <VBox.margin>
+                                <Insets bottom="20.0" left="30.0" right="20.0" top="20.0"/>
+                            </VBox.margin>
+                            <children>
+                                <Label prefHeight="100.0" prefWidth="200.0">
+                                    <graphic>
+                                        <Region styleClass="warning-img"/>
+                                    </graphic>
+                                </Label>
+                                <VBox prefWidth="500.0">
+                                    <children>
+                                        <Label prefWidth="460.0" styleClass="confirm-dialog-title"
+                                               text="Supprimer la commande ?"/>
+                                        <Label fx:id="descDialog"/>
+                                        <HBox alignment="CENTER" prefHeight="68.0" prefWidth="356.0" spacing="40.0">
+                                            <children>
+                                                <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0"
+                                                        styleClass="confirm-dialog-button-ok" text="Oui"
+                                                        fx:id="okButton"/>
+                                                <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0"
+                                                        styleClass="confirm-dialog-button-cancel" text="Annuler"
+                                                        fx:id="cancelButton"/>
+                                            </children>
+                                            <VBox.margin>
+                                                <Insets top="65.0"/>
+                                            </VBox.margin>
+                                        </HBox>
+                                    </children>
+                                    <HBox.margin>
+                                        <Insets left="30.0"/>
+                                    </HBox.margin>
+                                </VBox>
+                            </children>
+                        </HBox>
+                    </children>
+                </VBox>
+            </children>
+        </VBox>
     </children>
 </StackPane>
