--- a/src/main/resources/com/mmn/circuitscourts/fxml/Admin/Vehicules.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Admin/Vehicules.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.control.ScrollPane?>
 <StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: #EAECF0;" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mmn.circuitscourts.controller.admin.VehiculeController">
     <children>
         <BorderPane fx:id="container" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: white">
@@ -78,7 +79,7 @@
                                 </VBox>
                             </children>
                         </HBox>
-                        <VBox fx:id="contentTable" prefHeight="500" prefWidth="950" styleClass="commande-tableview">
+                        <VBox prefHeight="500" prefWidth="950" styleClass="commande-tableview">
                             <children>
                                 <HBox alignment="CENTER_LEFT" prefHeight="56" prefWidth="950" styleClass="commande-tableview-header">
                                     <children>
@@ -94,6 +95,15 @@
                                         <Insets right="40.0" />
                                     </padding>
                                 </HBox>
+                                <ScrollPane prefHeight="444.0" prefWidth="869.0">
+                                    <content>
+                                        <VBox fx:id="contentTable" style="-fx-background-color: white;">
+                                            <children>
+
+                                            </children>
+                                        </VBox>
+                                    </content>
+                                </ScrollPane>
                             </children>
                         </VBox>
                         <Pane>
@@ -112,5 +122,52 @@
                 </VBox>
             </center>
         </BorderPane>
+        <VBox fx:id="confirmationDialog" visible="false" alignment="CENTER" prefHeight="200.0" prefWidth="100.0"
+              style="-fx-background-color: rgba(0,0,0,0.25);">
+            <children>
+                <VBox maxHeight="230.0" maxWidth="500.0" prefHeight="230.0" prefWidth="100.0"
+                      styleClass="confirm-dialog">
+                    <children>
+                        <VBox maxHeight="8.0" prefHeight="200.0" prefWidth="100.0"
+                              styleClass="confirm-dialog-topbar-red"/>
+                        <HBox VBox.vgrow="ALWAYS">
+                            <VBox.margin>
+                                <Insets bottom="20.0" left="30.0" right="20.0" top="20.0"/>
+                            </VBox.margin>
+                            <children>
+                                <Label prefHeight="100.0" prefWidth="200.0">
+                                    <graphic>
+                                        <Region styleClass="warning-img"/>
+                                    </graphic>
+                                </Label>
+                                <VBox prefWidth="500.0">
+                                    <children>
+                                        <Label prefWidth="460.0" styleClass="confirm-dialog-title"
+                                               text="Supprimer le véhicule ?"/>
+                                        <Label fx:id="descDialog"/>
+                                        <HBox alignment="CENTER" prefHeight="68.0" prefWidth="356.0" spacing="40.0">
+                                            <children>
+                                                <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0"
+                                                        styleClass="confirm-dialog-button-ok" text="Oui"
+                                                        fx:id="okButton"/>
+                                                <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0"
+                                                        styleClass="confirm-dialog-button-cancel" text="Annuler"
+                                                        fx:id="cancelButton"/>
+                                            </children>
+                                            <VBox.margin>
+                                                <Insets top="65.0"/>
+                                            </VBox.margin>
+                                        </HBox>
+                                    </children>
+                                    <HBox.margin>
+                                        <Insets left="30.0"/>
+                                    </HBox.margin>
+                                </VBox>
+                            </children>
+                        </HBox>
+                    </children>
+                </VBox>
+            </children>
+        </VBox>
     </children>
 </StackPane>
