--- a/src/main/resources/com/mmn/circuitscourts/fxml/Admin/AddVehicule.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Admin/AddVehicule.fxml
@@ -30,10 +30,11 @@
                                 <Region styleClass="back-button-img"/>
                             </graphic>
                         </Button>
-                        <Label styleClass="main-title" text="Ajout d'une commande">
+                        <Label styleClass="main-title" text="Ajout d'un véhicule">
                             <VBox.margin>
                                 <Insets top="20.0" />
-                            </VBox.margin></Label>
+                            </VBox.margin>
+                        </Label>
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                             <children>
                                 <TextField fx:id="numImmat" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Numéro d'immatriculation"/>
